--- a/aspectjx/maven.gradle
+++ b/aspectjx/maven.gradle
@@ -4,16 +4,21 @@ version=LIB_VERSION
 group = LIB_GROUP
 def nexusRepositoryUrl=nexusReleases
 
-if (!LIB_ISRELEASE.toBoolean()){
+/*if (!LIB_ISRELEASE.toBoolean()){
     version = "${version}-SNAPSHOT"
     nexusRepositoryUrl=nexusSnapshots
-}
+}*/
+
+def RELEASE_REPOSITORY_URL = "" //TODO 填写仓库URL
+def REPOSITORY_URL = RELEASE_REPOSITORY_URL
+def NEXUS_USERNAME = "" //TODO 填写用户名
+def NEXUS_PASSWORD = "" //TODO 填写密码
 
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: "$nexusRepositoryUrl") {
-                authentication(userName: nexusUserName, password: nexusPassword)
+            repository(url: REPOSITORY_URL) {
+                authentication(userName: NEXUS_USERNAME, password: NEXUS_PASSWORD)
             }
 
             pom.project {
