--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-LIB_GROUP=com.hujiang.aspectjx
+LIB_GROUP=com.hujiang.aspectjx.ext
 LIB_ARTIFACT = gradle-android-plugin-aspectjx
-LIB_VERSION=2.0.8
+LIB_VERSION=2.0.9
 LIB_DES=A Gradle plugin which enables AspectJ for Android builds. supports Kotlin, aar, jar aspect
 LIB_ISRELEASE=true
 
